--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ pag-bens-e-riquzes/imagem2/todas/desktop.ini
 bens-e-riquezas/imagem2/todas/desktop.ini
 pag-bens-e-riquzes/desktop.ini
 bens-e-riquezas/imagem1/todas/desktop.ini
+passo-8-magias/desktop.ini
